# FFmpegSample

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/coocent/ffmpegsample/: FFmpegActivity.kt  MainActivity.kt  MySurfaceView.kt
app/src/main/res/layout/: activity_ffmpeg.xml  activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
ffmpeg/: build.gradle
ffmpeg/src/main/cpp/: CMakeLists.txt  ffmpeg_player.cpp
ffmpeg/src/main/cpp/callback/: OnPrepareCallback.h  PlayerCallback.h  PrepareCallback.h
ffmpeg/src/main/cpp/decoder/: Decoder.cpp  Decoder.h  VideoDecoder.cpp  VideoDecoder.h
ffmpeg/src/main/cpp/jni/: JNIPlayerCallback.cpp  JNIPlayerCallback.h  JNIPrepareCallback.cpp  JNIPrepareCallback.h
ffmpeg/src/main/cpp/player/: FFmpegPlayer.cpp  FFmpegPlayer.h  Player.cpp  Player.h  TempPlayer.cpp  TempPlayer.h
ffmpeg/src/main/cpp/render/: NativeVideoRender.cpp  NativeVideoRender.h  Render.cpp  Render.h
ffmpeg/src/main/cpp/utils/: ImageDef.h  JVMUtils.cpp  JVMUtils.h  LogUtils.h
ffmpeg/src/main/java/com/coocent/ffmpeg/: FFmpegPlayer.kt
ffmpeg/src/main/java/com/coocent/ffmpeg/listener/: OnPreparedListener.kt
ffmpeg/src/main/jniLibs/arm64-v8a/include/: config.h
ffmpeg/src/main/jniLibs/arm64-v8a/include/libavutil/: ffversion.h
ffmpeg/src/main/jniLibs/armeabi-v7a/include/: config.h
gradle/wrapper/: gradle-wrapper.properties
